# video-to-notes-skill

./: .env.example  .gitignore  LICENSE  QUICK_START.md  README.md  README_zh.md  SKILL.md  USAGE_GUIDE.md  video-to-notes.skill
examples/: github-spec-kit-notes.md
references/: troubleshooting.md
scripts/: export_youtube_cookies.py  process_video.py  pyproject.toml  quick_cookie_extract.py  requirements.txt  setup_youtube_access.py
scripts/config/: settings.py
scripts/core/: __init__.py  exceptions.py  summarizer.py  transcriber.py  video_processor.py  xiaohongshu_downloader.py  youtube_transcript.py
