[project]
name = "video-to-notes"
version = "1.0.0"
description = "Convert YouTube and Bilibili videos into AI-powered Markdown notes"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.1.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
